--- a/LEE/box.css
+++ b/LEE/box.css
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   transition: width 0.5s ease, height 0.5s ease;
   background-color: lightblue;
-  background: url(img/background.jpg);
+  background: url(img/background.jpg) center / cover no-repeat;
 
   background-position: 50%, 50%;
 }
