--- a/SON/test.css
+++ b/SON/test.css
@@ -183,7 +183,6 @@
 
 .background-image {
   position: absolute;
-<<<<<<< HEAD
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -191,11 +190,12 @@
   height: 953px;
   box-sizing: border-box;
   transition: width 0.5s ease, height 0.5s ease;
-  background-color: lightblue;
-  background: url(../LEE/img/background.jpg);
+
+  background: url(../LEE/img/background.jpg) center / cover no-repeat;
 
   background-position: 50%, 50%;
-=======
+
+  /* background-position: 50%, 50%;
   top: calc(50% - 80px);
   left: calc(50% - 360px);
   width: 720px;
@@ -209,7 +209,7 @@
   opacity: 0;
   transform-origin: left;
   animation: fadeIn 0s 1.8s ease-in-out forwards,
-    irisWipe 1s 1.8s ease-out forwards, change 7s 3s linear infinite;
+    irisWipe 1s 1.8s ease-out forwards, change 7s 3s linear infinite; */
 }
 @media (max-width: 878px) {
   .section-container {
@@ -229,5 +229,4 @@
   .animated-bar {
     display: none;
   }
->>>>>>> fc2f90af3d00b96fa6cea538076dab01341d183a
 }
